MPSWAT-101: fix tiles not showing on low res screen desktop

--- a/src/documents/styles/modules/tiles.css.less
+++ b/src/documents/styles/modules/tiles.css.less
@@ -396,7 +396,7 @@
 	.transition(opacity 0.4s ease-in-out);
 }
 
-.desktop-capable #main .tile {
+#main .tile {
 	.translateZ();
 	&.hidden {
 		.translate3d(0, 80px, 0);
